--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,12 +1,19 @@
 
-header {
+.header {
     background: none repeat scroll 0 0 #A6C9E2;
     color: #2E6E9E;
     font-size: 20px;
     padding: 5px 20px;
 }
 
-footer {
+.header3 {
+    background: none repeat scroll 0 0 #006677;
+    color: #00ffff;
+    font-size: 16px;
+    padding: 5px 20px;
+}
+
+.footer {
     background: none repeat scroll 0 0 #A6C9E2;
     color: #2E6E9E;
     font-size: 20px;
