Lesson#15: sync with HW15 recommended version

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,19 +1,11 @@
-
-.header {
+header {
     background: none repeat scroll 0 0 #A6C9E2;
     color: #2E6E9E;
     font-size: 20px;
     padding: 5px 20px;
 }
 
-.header3 {
-    background: none repeat scroll 0 0 #006677;
-    color: #00ffff;
-    font-size: 16px;
-    padding: 5px 20px;
-}
-
-.footer {
+footer {
     background: none repeat scroll 0 0 #A6C9E2;
     color: #2E6E9E;
     font-size: 20px;
