Add @author to generator

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -115,3 +115,9 @@ a.delete {
     float: right;
     vertical-align: top;
 }
+
+.header-message {
+    text-align: center;
+    padding-top: 0.03em;
+    padding-bottom: 0.01em;
+}
