Markov list node with tests

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -117,7 +117,8 @@ a.delete {
 }
 
 .header-message {
-    text-align: center;
-    padding-top: 0.03em;
-    padding-bottom: 0.01em;
+  font-size: 12px;
+  text-align: left;
+  padding-top: 0.03em;
+  padding-bottom: 0.01em;
 }
